syntax = "proto3";
package quicksilver.interchainstaking.v1;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "quicksilver/interchainstaking/v1/proposals.proto";

option go_package = "github.com/quicksilver-zone/quicksilver/x/interchainstaking/types";

// Msg defines the interchainstaking Msg service.
service Msg {
  // RequestRedemption defines a method for requesting burning of qAssets for
  // native assets.
  rpc RequestRedemption(MsgRequestRedemption) returns (MsgRequestRedemptionResponse) {
    option (google.api.http) = {
      post: "/quicksilver/tx/v1/interchainstaking/redeem"
      body: "*"
    };
  }
  // SignalIntent defines a method for signalling voting intent for one or more
  // validators.
  rpc SignalIntent(MsgSignalIntent) returns (MsgSignalIntentResponse) {
    option (google.api.http) = {
      post: "/quicksilver/tx/v1/interchainstaking/intent"
      body: "*"
    };
  }

  // CancelRedemption defines a method for cancelling a redemption request and
  // returning the escrowed assets.
  rpc CancelRedemption(MsgCancelRedemption) returns (MsgCancelRedemptionResponse) {
    option (google.api.http) = {
      post: "/quicksilver/tx/v1/interchainstaking/cancel_redemption"
      body: "*"
    };
  }

  // RequeueRedemption defines a method for requeuing a failed redemption.
  rpc RequeueRedemption(MsgRequeueRedemption) returns (MsgRequeueRedemptionResponse) {
    option (google.api.http) = {
      post: "/quicksilver/tx/v1/interchainstaking/requeue_redemption"
      body: "*"
    };
  }

  // UpdateRedemption defines a method for updating a redemption.
  rpc UpdateRedemption(MsgUpdateRedemption) returns (MsgUpdateRedemptionResponse) {
    option (google.api.http) = {
      post: "/quicksilver/tx/v1/interchainstaking/update_redemption"
      body: "*"
    };
  }

  // SignalIntent defines a method for signalling voting intent for one or more
  // validators.
  rpc GovCloseChannel(MsgGovCloseChannel) returns (MsgGovCloseChannelResponse) {
    option (google.api.http) = {
      post: "/quicksilver/tx/v1/interchainstaking/close_channel"
      body: "*"
    };
  }

  rpc GovReopenChannel(MsgGovReopenChannel) returns (MsgGovReopenChannelResponse) {
    option (google.api.http) = {
      post: "/quicksilver/tx/v1/interchainstaking/reopen_channel"
      body: "*"
    };
  }

  rpc GovSetLsmCaps(MsgGovSetLsmCaps) returns (MsgGovSetLsmCapsResponse) {
    option (google.api.http) = {
      post: "/quicksilver/tx/v1/interchainstaking/reopen_channel"
      body: "*"
    };
  }

  rpc GovAddValidatorDenyList(MsgGovAddValidatorDenyList) returns (MsgGovAddValidatorDenyListResponse) {
    option (google.api.http) = {
      post: "/quicksilver/tx/v1/interchainstaking/add_validator_denylist"
      body: "*"
    };
  }

  rpc GovRemoveValidatorDenyList(MsgGovRemoveValidatorDenyList) returns (MsgGovRemoveValidatorDenyListResponse) {
    option (google.api.http) = {
      post: "/quicksilver/tx/v1/interchainstaking/remove_validator_denylist"
      body: "*"
    };
  }
}

// MsgRequestRedemption represents a message type to request a burn of qAssets
// for native assets.
message MsgRequestRedemption {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  cosmos.base.v1beta1.Coin value = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"coin\""
  ];
  string destination_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string from_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgRequestRedemptionResponse defines the MsgRequestRedemption response type.
message MsgRequestRedemptionResponse {}

// MsgCancelRedemption represents a message type to cancel .
message MsgCancelRedemption {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string chain_id = 1;
  string hash = 2;
  string from_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgCancelRedemptionResponse defines the MsgCancelRedemption response type.
message MsgCancelRedemptionResponse {
  cosmos.base.v1beta1.Coin returned = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"coin\""
  ];
}

// MsgUpdateRedemption represents a message type to update a redemption.
message MsgUpdateRedemption {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string chain_id = 1;
  string hash = 2;
  int32 new_status = 3;
  string from_address = 4 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgUpdateRedemptionResponse defines the MsgUpdateRedemption response type.
message MsgUpdateRedemptionResponse {}

// MsgRequeueRedemption represents a message type to requeue.
message MsgRequeueRedemption {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string chain_id = 1;
  string hash = 2;
  string from_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgRequeueRedemptionResponse defines the MsgRequeueRedemption response type.
message MsgRequeueRedemptionResponse {}

// MsgSignalIntent represents a message type for signalling voting intent for
// one or more validators.
message MsgSignalIntent {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string chain_id = 1 [(gogoproto.moretags) = "yaml:\"chain_id\""];
  string intents = 2 [(gogoproto.moretags) = "yaml:\"intents\""];
  string from_address = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgSignalIntentResponse defines the MsgSignalIntent response type.
message MsgSignalIntentResponse {}
